--- a/front/package.json
+++ b/front/package.json
@@ -9,14 +9,15 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
-    "@material-ui/styles": "^4.10.0",
+    "@reach/router": "^1.3.4",
     "chart.js": "^2.9.3",
+    "dayjs": "^1.8.36",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
-    "react-static-plugin-source-filesystem": "^7.2.0"
+    "react-universal-component": "^4.0.1"
   },
   "devDependencies": {
     "@material-ui/core": "^4.10.2",
@@ -34,5 +35,9 @@
     "prop-types": "^15.7.2",
     "react-chartjs-2": "^2.9.0",
     "serve": "^11.1.0"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "kai <kaitexio0522@me.com>",
+  "license": "MIT"
 }
